# Wheel-GINS

./: .gitignore  CMakeLists.txt  README.md
config/: 20231213.yaml  default.yaml
src/: main.cpp
src/common/: earth.h  rotation.h  types.h
src/fileio/: filebase.h  fileloader.cpp  fileloader.h  filesaver.cpp  filesaver.h  gnssfileloader.h  imufileloader.h
src/wheelgins/: insmech.cpp  insmech.h  loadanddump.h  wheelgins.cpp  wheelgins.h
